--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="footer">
 		<small>
-			<%= link_to"nicos", "http//nicos.com" %>
+			<%= link_to"I Apero", "http//nicos.com" %>
 			by nicolas
 		</small>
 </div>
