--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,10 @@
-<h1>Bienvenue dans l'app de nicolas</h1>
-<p>
-	bienvenue dans l'application
-	<%= link_to "nicos", "http//nicos.com" %>
-</p>
-<p>
-	<%= link_to "sign up now!", "#" %>
-</p>	
+<div class="hero-unit">
+	<h1>Bienvenue dans I Apero </h1>
+	<p>
+		bienvenue dans l'application
+		<%= link_to "I Apero", "http//nicos.com" %>
+	</p>
+	<p>
+		<%= link_to "sign up now!", "#" , class:"btn btn-info btn-large" %>
+	</p>
+</div>	
