--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <h1>About</h1>
 <p>
-	<%= link_to "I Apero", "http://nicos.com" %>
+	<%= link_to "E-Apero", "http://nicos.com" %>
 	l'application qui donne soif
 </p>
