--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,15 @@
+<% if user_signed_in? %>
+	<h1>Coming soon </h1>
+<% else %>
+
 <div class="hero-unit">
-	<h1>Bienvenue dans I Apero </h1>
+	<h1>Bienvenue dans E-Apero </h1>
 	<p>
-		bienvenue dans l'application
-		<%= link_to "I Apero", "http//nicos.com" %>
+			bienvenue dans l'application
+			<%= link_to "E-Apero", "http//nicos.com" %>
 	</p>
 	<p>
-		<%= link_to "sign up now!", "#" , class:"btn btn-info btn-large" %>
+			<%= link_to "sign up now!", new_user_registration_path , class:"btn btn-info btn-large" %>
 	</p>
-</div>	
+</div>
+<% end %>
