--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,13 @@
 <h2>Sign up</h2>
-
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html:{class: 'form-horizontal'}) do |f| %>
+<%= simple_form_for(resource, :as => resource_name, :url => session_path(resource_name),html: {class: 'form-horizontal'}) do |f| %>
   <%= f.error_notification %>
 
   <%= f.input :email %>
   <%= f.input :password %>
   <%= f.input :password_confirmation %>
   <div class="form-actions">
- 	<div><%= f.submit "Sign up", class: "btn btn-info" %></div>
+ 	<div><%= f.submit "Sign up", class: "btn btn-info" %>
+ 	</div>
 
   
 <% end %>
